--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url(footer.css);
+
 body {
     background-color: white;
     margin: 0;
@@ -113,29 +115,26 @@ h1 h2 h3 h4{
 .row{
   margin-top: 35px;
   text-align: center;
-  gap: 40px;
+  font-size: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-left: 10vw;
+  margin-right: 10vw;
 }
 
 .soleil{
   display: inline-block;
   max-width: 30%;
   vertical-align: top;
-  margin-right: 50px;
+  font-size: 16px;
 }
 
 .camera{
     display: inline-block;
     max-width: 30%;
     vertical-align: top;
-    margin-left: 50px;
-}
-
-@media screen and (max-width: 60%)
-{
-     .left-div, .right-div
-     {
-          max-width: 100%;
-     }
+    font-size: 16px;
 }
 
 .titre{
@@ -328,49 +327,6 @@ h1 h2 h3 h4{
   margin-bottom: 100px;
 }
 
-/*FOOTER*/
-
-.footer {
-  width: 100%;
-  height: 100px;
-  background-color: #52b3c2;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.mentions{
-  margin-top: 15px;
-  display: flex;
-}
-
-.mention {
-  color: white;
-  text-decoration: none;
-  margin: 30px;
-}
-
-.mention:hover {
-  color: #4e4e4e;
-  text-decoration: underline;
-}
-
-.social-media {
-  margin-top: 15px;
-  display: flex;
-  gap: 20px;
-  margin-right: 30px;
-}
-
-i{
-  color: white;
-}
-
-i:hover{
-  color:#4e4e4e;
-  transition: all ease 0,5s;
-}
-
 .soleil svg{
   fill: #52b3c2;
   transition: all ease 0,5s;
@@ -389,4 +345,51 @@ i:hover{
   fill: #3f97a4;
 }
 
+/*TABLETTE*/
+
+@media (max-width: 820px){
+
+  .card-grille{
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .titre{
+    background-size: 50% 0.5em;
+  }
+
+  .soustitre{
+    background-size: 35% 0.5em; 
+  }
+}
+
 /*IPHONE XR*/
+
+@media (max-width: 414px){
+  .row {
+  flex-direction: column;
+  }
+
+  .soleil{
+    max-width: 100%;
+  }
+
+  .camera{
+    max-width: 100%;
+  }
+
+  .links{
+    display: none;
+  }
+
+  .card-grille{
+    grid-template-columns: 1fr;
+  }
+
+  .titre{
+    background-size: 97% 0.5em;
+  }
+
+  .soustitre{
+    background-size: 75% 0.5em; 
+  }
+}
